# ex_vscode

./: CMakeLists.txt  README.md  main.cpp  run
.cache/clangd/index/: add_offer_win.cpp.2557C399E4BFE91B.idx  add_offer_win.cpp.2A236E7ECBBFBC66.idx  add_offer_win.cpp.A20540B04D1A5474.idx  add_offer_win.h.37CD3150676088BD.idx  add_offer_win.h.D00E6AEA9D69F30F.idx  ads.h.BF13870CBBAF3C84.idx  card.cpp.9E36CACF6B8B8A2C.idx  card.cpp.C2725014A520E9BC.idx  card.cpp.FA06F9E7CFE6CB2C.idx  card.h.8C12FBC5825A995F.idx  card.h.A7444E7C2DC6CC20.idx  card_view.cpp.0B2AB46BB81E1243.idx  card_view.cpp.725831FE27D4541F.idx  card_view.cpp.8A80151A45623C4C.idx  card_view.h.899347A712612383.idx  card_view.h.C9278896DE20AE6A.idx  dbControll.cpp.5D591E6B5D42249B.idx  dbControll.cpp.96889CD194B6FDA5.idx  dbControll.cpp.FE30857D1DDBB4ED.idx  dbControll.h.4286D1974F8CB509.idx  dbControll.h.BE15DF8954C6C2B1.idx  edit_card.cpp.0D4D8EDDE2550FB9.idx  edit_card.cpp.AD02B06D4B25822F.idx  edit_card.cpp.E9BA6F64C718376E.idx  edit_card.h.C728E3BA017C8371.idx  edit_card.h.EFC5E6FFFF1D37B8.idx  info.cpp.9D32DB1115607804.idx  info.h.9E17E15FCB8FAF26.idx  loginWin.cpp.007DFD12478E658C.idx  loginWin.cpp.88D291FB2DA2D190.idx  loginWin.cpp.F2ED9E4D922FDBC2.idx  loginWin.h.436B62B73CD63F39.idx  loginWin.h.6A85F1F74E8FD210.idx  main.cpp.C08425503D92D2B2.idx  main.cpp.C262D9674AAE77E9.idx  main.cpp.E1DC1067873B5A5E.idx  mainFrame.cpp.113CB770476B0796.idx  mainFrame.cpp.A2C7B59FB52E5072.idx  mainFrame.cpp.BF961E91DFDB58C3.idx  mainFrame.h.C2AB4E49CB5A1399.idx  (+17 more)
data/: cu
include/: add_offer_win.h  ads.h  card.h  card_view.h  dbControll.h  edit_card.h  info.h  loginFrame.h  loginWin.h  mainFrame.h  order.h  profile_win.h  signupFrame.h  signupWin.h
libpqxx/7.9.2/: INSTALL_RECEIPT.json  sbom.spdx.json
libpqxx/7.9.2/.brew/: libpqxx.rb
libpqxx/7.9.2/lib/: libpqxx-7.9.dylib
libpqxx/7.9.2/lib/pkgconfig/: libpqxx.pc
src/: add_offer_win.cpp  card.cpp  card_view.cpp  dbControll.cpp  edit_card.cpp  info.cpp  loginFrame.cpp  loginWin.cpp  mainFram.cpp  mainFrame.cpp  order.cpp  profile_win.cpp  signupFrame.cpp  signupWin.cpp
